init get user profile
