# api.yml
@@ -65,6 +65,25 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+  /profile:
+    get:
+      summary: This is just a test endpoint to get you started. Please delete this endpoint.
+      operationId: getProfile
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Test return
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/GetProfileResponse"
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
                 
 components:
   schemas:
@@ -109,6 +128,16 @@ components:
           type: integer
           format: int64
         token:
+          type: string
+    GetProfileResponse:
+      type: object
+      required:
+        - full_name
+        - phone
+      properties:
+        full_name:
+          type: string
+        phone:
           type: string
     ErrorResponse:
       type: array
